--- a/Apps/Demo1/CMakeLists.txt
+++ b/Apps/Demo1/CMakeLists.txt
@@ -2,13 +2,17 @@ project( Demo1 )
 
 include_directories( . )
 include_directories( src )
+include_directories( ../Common )
 
 file( GLOB SRCS "src/*.cpp" )
 file( GLOB INCS "src/*.h" )
+file( GLOB SRCS_COM "../Common/*.cpp" )
+file( GLOB INCS_COM "../Common/*.h" )
 
 source_group( Sources FILES ${SRCS} ${INCS} )
+source_group( Common FILES ${SRCS_COM} ${INCS_COM} )
 
-add_executable( ${PROJECT_NAME} ${SRCS} ${INCS} )
+add_executable( ${PROJECT_NAME} ${SRCS} ${INCS} ${SRCS_COM} ${INCS_COM} )
 
 link_directories( ${SDL_LIBRARY_DIRS} )
 
