--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "externals/SDL2"]
 	path = externals/SDL2
 	url = git@github.com:libsdl-org/SDL.git
+[submodule "externals/glm"]
+	path = externals/glm
+	url = https://github.com/g-truc/glm
