[DEMO3] First version. 3D demo using glm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,4 +173,5 @@ endfunction()
 # apps
 add_subdirectory_if_exists( Apps/Demo1 )
 add_subdirectory_if_exists( Apps/Demo2 )
+add_subdirectory_if_exists( Apps/Demo3 )
 
