[DEMO4] More lean 3D demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,4 +174,5 @@ endfunction()
 add_subdirectory_if_exists( Apps/Demo1 )
 add_subdirectory_if_exists( Apps/Demo2 )
 add_subdirectory_if_exists( Apps/Demo3 )
+add_subdirectory_if_exists( Apps/Demo4 )
 
