--- a/Apps/Demo2/CMakeLists.txt
+++ b/Apps/Demo2/CMakeLists.txt
@@ -15,7 +15,10 @@ source_group( Common FILES ${SRCS_COM} ${INCS_COM} )
 add_executable( ${PROJECT_NAME} ${SRCS} ${INCS} ${SRCS_COM} ${INCS_COM} )
 
 target_link_libraries( ${PROJECT_NAME}
-    ${SDL_LIBRARIES} ${SDL_LIBRARIES_EXTRA} ${PLATFORM_LINK_LIBS} )
+    ${SDL_LIBRARIES}
+    ${SDL_LIBRARIES_EXTRA}
+    ${PLATFORM_LINK_LIBS}
+    ${IMGUI_LIBRARIES} )
 
 Copy_SDL_DLLs_to_RuntimeOut()
 
