--- a/Apps/Demo4/CMakeLists.txt
+++ b/Apps/Demo4/CMakeLists.txt
@@ -24,7 +24,10 @@ add_executable( ${PROJECT_NAME}
                 ${INCS_GLM} )
 
 target_link_libraries( ${PROJECT_NAME}
-    ${SDL_LIBRARIES} ${SDL_LIBRARIES_EXTRA} ${PLATFORM_LINK_LIBS} )
+    ${SDL_LIBRARIES}
+    ${SDL_LIBRARIES_EXTRA}
+    ${PLATFORM_LINK_LIBS}
+    ${IMGUI_LIBRARIES} )
 
 Copy_SDL_DLLs_to_RuntimeOut()
 
