[DEMO7] Initial version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,4 +168,5 @@ add_subdirectory_if_exists( Apps/Demo3 )
 add_subdirectory_if_exists( Apps/Demo4 )
 add_subdirectory_if_exists( Apps/Demo5 )
 add_subdirectory_if_exists( Apps/Demo6 )
+add_subdirectory_if_exists( Apps/Demo7 )
 
