[LIBS][APPS] Created "Common" library. Added matrix to ImmGL shaders

--- a/Apps/Demo6/CMakeLists.txt
+++ b/Apps/Demo6/CMakeLists.txt
@@ -2,33 +2,15 @@ project( Demo6 )
 
 include_directories( . )
 include_directories( src )
-include_directories( ../Common )
-# include glm, this is all that it's needed
-include_directories( ../../_externals/glm )
 
 file( GLOB SRCS "src/*.cpp" )
 file( GLOB INCS "src/*.h" )
-file( GLOB SRCS_COM "../Common/*.cpp" )
-file( GLOB INCS_COM "../Common/*.h" )
-
-# adding this to the exe is only for intellisense, not to compile
-file( GLOB INCS_GLM "../_externals/glm/glm/*.hpp" )
 
 source_group( Sources FILES ${SRCS} ${INCS} )
-source_group( Common FILES ${SRCS_COM} ${INCS_COM} )
-source_group( glm FILES ${INCS_GLM} )
 
-add_executable( ${PROJECT_NAME}
-                ${SRCS} ${INCS}
-                ${SRCS_COM} ${INCS_COM}
-                ${INCS_GLM} )
+add_executable( ${PROJECT_NAME} ${SRCS} ${INCS} )
 
-target_link_libraries( ${PROJECT_NAME}
-    ${SDL_LIBRARIES}
-    ${SDL_LIBRARIES_EXTRA}
-    ${GFX_LINK_LIBS}
-    ${PLATFORM_LINK_LIBS}
-    ${IMGUI_LIBRARIES} )
+target_link_libraries( ${PROJECT_NAME} Common )
 
 Copy_SDL_DLLs_to_RuntimeOut()
 
