Update SDL and ImGui versions, switch to SDL2 and SDLRenderer2 backends.

--- a/externals/local/imgui/CMakeLists.txt
+++ b/externals/local/imgui/CMakeLists.txt
@@ -8,8 +8,8 @@ file( GLOB SRCS "${IMGUI_SRCDIR}/*.cpp"
 include_directories( "${IMGUI_SRCDIR}/backends" )
 
 # Regular SDL backend is always included
-file( GLOB SRCS_IMPL "${IMGUI_SRCDIR}/backends/*_sdl.*"
-                     "${IMGUI_SRCDIR}/backends/*_sdlrenderer.*" )
+file( GLOB SRCS_IMPL "${IMGUI_SRCDIR}/backends/*_sdl2.*"
+                     "${IMGUI_SRCDIR}/backends/*_sdlrenderer2.*" )
 # OpenGL backend is optional
 if (ENABLE_OPENGL)
     file( GLOB SRCS_IMPL_OGL "${IMGUI_SRCDIR}/backends/*_sdl2.*"
@@ -29,4 +29,3 @@ add_library( ${PROJECT_NAME} STATIC ${SRCS}
                                     ${SRCS_IMPL}
                                     ${SRCS_IMPL_OGL}
                                     ${SRCS_MISC} )
-
